<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".login.SignUpActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:textSize="11dp"
        android:text="@string/name"
        android:textColor="@color/sign_up_color"
        android:layout_marginTop="13dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="326dp"
        android:layout_height="42dp"
        android:inputType="textPersonName"
        android:hint="@string/hint_name"
        android:textSize="12dp"
        android:textColorHint="@color/login_hint_color"
        android:paddingLeft="42dp"
        android:ems="10"
        android:id="@+id/et_signup_name"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="11dp"
        android:text="@string/login_info"
        android:textColor="@color/sign_up_color"
        android:id="@+id/textView4"
        android:layout_below="@+id/et_signup_name"
        android:layout_marginTop="13dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="326dp"
        android:layout_height="42dp"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:hint="@string/hint_email"
        android:textColorHint="@color/login_hint_color"
        android:textSize="12dp"
        android:paddingLeft="42dp"
        android:id="@+id/et_signup_email"
        android:layout_below="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="326dp"
        android:layout_height="42dp"
        android:inputType="textPassword"
        android:hint="@string/hint_password"
        android:textColorHint="@color/login_hint_color"
        android:textSize="12dp"
        android:paddingLeft="42dp"
        android:ems="10"
        android:id="@+id/et_signup_password"
        android:layout_below="@+id/et_signup_email"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="11dp"
        android:text="@string/phone"
        android:textColor="@color/sign_up_color"
        android:id="@+id/textView5"
        android:layout_below="@+id/et_signup_password"
        android:layout_marginTop="13dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="326dp"
        android:layout_height="42dp"
        android:inputType="phone"
        android:hint="@string/hint_phone"
        android:textColorHint="@color/login_hint_color"
        android:textSize="12dp"
        android:paddingLeft="42dp"
        android:ems="10"
        android:id="@+id/et_signup_phone"
        android:layout_below="@+id/textView5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView6"
        android:background="@drawable/signup_name"
        android:layout_marginLeft="6dp"
        android:layout_marginBottom="6dp"
        android:layout_above="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView7"
        android:background="@drawable/signup_id"
        android:layout_marginLeft="6dp"
        android:layout_marginBottom="6dp"
        android:layout_alignBottom="@+id/et_signup_email"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView8"
        android:background="@drawable/signup_password"
        android:layout_marginLeft="6dp"
        android:layout_marginBottom="6dp"
        android:layout_alignBottom="@+id/et_signup_password"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView9"
        android:background="@drawable/signup_phone"
        android:layout_marginLeft="6dp"
        android:layout_marginBottom="6dp"
        android:layout_alignBottom="@+id/et_signup_phone"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="326dp"
        android:layout_height="42dp"
        android:background="@drawable/signup_btn"
        android:id="@+id/btn_signup"
        android:layout_marginBottom="1dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
