<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".login.AgreementActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:id="@+id/aamt">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_agreement"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/white"
            android:homeAsUpIndicator="@drawable/back"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textColor="@color/create_detail_title_color"
                android:text="@string/agreement"/>
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/service_rule_title"
        android:id="@+id/service_rule_title"
        android:textSize="12dp"
        android:textColor="@color/title_agreement_color"
        android:layout_below="@+id/aamt"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="326dp"
        android:layout_height="184dp"
        android:text="@string/service_rule"
        android:id="@+id/service_rule"
        android:scrollbars="vertical"
        android:layout_below="@+id/service_rule_title"
        android:background="@drawable/border_style"
        android:padding="24dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/privacy_rule_title"
        android:id="@+id/privacy_rule_title"
        android:textSize="12dp"
        android:textColor="@color/title_agreement_color"
        android:layout_below="@+id/service_rule"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_below="@+id/privacy_rule_title"
        android:layout_width="326dp"
        android:layout_height="184dp"
        android:text="@string/service_rule"
        android:id="@+id/privacy_rule"
        android:scrollbars="vertical"
        android:background="@drawable/border_style"
        android:padding="24dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    
    <Button
        android:layout_width="326dp"
        android:layout_height="42dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/btn_agree"
        android:background="@drawable/agree_btn"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="17dp"/>

</RelativeLayout>